--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1576,7 +1576,7 @@ div.focused_table {
         line-height: 16px;
         margin: 0 -4px 0 0;
         padding: 12px 6px;
-
+        overflow: hidden;
         @media (max-width: 500px) {
             padding: 7px 3.5px; /* based on having ~41.66% decrease */
         }
@@ -1599,7 +1599,6 @@ div.focused_table {
 
     .stream {
         text-overflow: clip;
-        overflow: hidden;
         color: inherit;
         text-decoration: none;
         /* The first ~3px of padding here overlaps with the left padding from sub_count for some reason. */
@@ -1620,6 +1619,7 @@ div.focused_table {
         margin-left: 1px;
         padding-right: 10px;
         margin-right: 1px;
+        overflow: visible;
         .fa.fa-user-o {
             margin-left: 0;
         }
@@ -1659,7 +1659,6 @@ div.focused_table {
            is chosen such that the narrow description shrinks to close
            before the stream name must begin to shrink */
         flex-shrink: 100;
-        overflow: hidden;
         white-space: nowrap;
         margin: 0;
         padding: 12px 0;
@@ -1676,6 +1675,7 @@ div.focused_table {
     }
 
     .search_closed {
+        overflow: visible;
         flex: 0; /* makes sure search icon is always visible */
 
         cursor: pointer;
@@ -1685,10 +1685,6 @@ div.focused_table {
         @media (max-width: 500px) {
             padding: 5px 15px 0 0;
         }
-    }
-
-    > :not(.search_closed):not(.sub_count):not(.narrow_description) {
-        overflow: hidden;
     }
 
     > :not(.stream) {
