Email address visibility: Display current value of setting during account creation.
This commit adds a question mark(?) beside the Email text which on hovering
displays the tooltip displaying the message about email address visibility
according to the email_address_visibility settings.

Fixes: #16920

--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -657,30 +657,29 @@ html {
     }
 }
 
-
-.email-vis-tooltip:hover .email-vis-tooltip-text{
+.email-vis-tooltip:hover .email-vis-tooltip-text {
     visibility: visible;
 }
 
 .email-vis-tooltip {
     position: relative;
     display: inline-block;
-    border-radius: 100%; 
+    border-radius: 100%;
 }
 
 .email-vis-tooltip .email-vis-tooltip-text {
     visibility: hidden;
     width: max-content;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    background-color: hsla(0, 100%, 0%, 0.7);
+    color: hsl(0, 100%, 100%);
     text-align: center;
     padding: 2px 10px;
     border-radius: 6px;
     position: absolute;
     z-index: 1;
     font-weight: 300;
+    margin-left: 10px;
 }
-
 
 .confirm-email-change-page .white-box {
     max-width: 500px;
