Email address visibility: Display current setting during account creation.
This commit displays a line of text of email visibility according
to the email_address_visibility setting. It also includes a change
regarding the styling of the actual email address.

Fixes: #16920

--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -739,6 +739,13 @@ button#register_auth_button_gitlab {
     }
 }
 
+.email-visibility-text {
+    font-size: small;
+    float: left;
+    font-style: italic;
+    margin-top: 20px;
+}
+
 #registration {
     width: auto;
     padding: 0;
@@ -834,8 +841,8 @@ button#register_auth_button_gitlab {
 
     #id_email {
         font-weight: normal;
-        margin: 2px;
-        padding-top: 25px;
+        margin-top: 2px;
+        padding: auto;
         text-align: left;
         overflow-wrap: break-word;
     }
