alert-box: Fix scroll bar on alert-box.
There was a weird scroll bar appearing on the alert-box
for "Unable to connect to Zulip". It was happening due to the
big font-size of exit button.

To fix this issue, I reduced the font-size of exit button and
changed padding to padding-right as only right padding is
required for exit button.

Fixes #16911.

--- a/static/styles/alerts.css
+++ b/static/styles/alerts.css
@@ -199,8 +199,9 @@ $alert-error-red: hsl(0, 80%, 40%);
             cursor: pointer;
 
             &::after {
-                padding: 10px;
+                padding-right: 10px;
                 content: "\d7";
+                font-size: 0.9em;
             }
         }
     }
