registration: Add email visibility status of the organization.
The commits aims to provide a disclaimer about the organization's email
address visibility to the user while signing up for privacy concerns.

Fixes #16920.

--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -834,8 +834,7 @@ button#register_auth_button_gitlab {
 
     #id_email {
         font-weight: normal;
-        margin: 2px;
-        padding-top: 25px;
+        padding-top: 10px;
         text-align: left;
         overflow-wrap: break-word;
     }
@@ -894,6 +893,12 @@ button#register_auth_button_gitlab {
 
     .org-url {
         margin-bottom: 5px !important;
+    }
+
+    .email-visibility-text {
+        font-size: small;
+        text-align: left;
+        font-style: italic;
     }
 }
 
