--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -506,7 +506,7 @@ a#undo_markdown_preview {
 @media (max-width: 775px) {
     .compose-content {
         margin-right: 7px;
-        margin-left: 7px;
+        margin-left: 7px !important;
     }
 }
 
