--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -93,6 +93,7 @@
             {% include "zerver/app/left_sidebar.html" %}
         </div>
         <div class="column-middle">
+            <div id="left-sidebar-resizer"></div>
             <div class="column-middle-inner tab-content">
                 <div class="tab-pane active" id="message_feed_container">
                     <div class="fixed-app" id="floating_recipient_bar">
