--- a/static/templates/settings/muted_topics_settings.hbs
+++ b/static/templates/settings/muted_topics_settings.hbs
@@ -8,7 +8,7 @@
                 <th data-sort="numeric" data-sort-prop="date_muted">{{t "Date muted" }}</th>
                 <th class="actions">{{t "Actions" }}</th>
             </thead>
-            <tbody id="muted_topics_table" data-empty="{{t 'You have not muted any topics yet.'}}" data-list-widget="muted-topics-list"></tbody>
+            <tbody id="muted_topics_table" class="required-text" data-empty="{{t 'You have not muted any topics yet.'}}" data-list-widget="muted-topics-list"></tbody>
         </table>
     </div>
 </div>
